# ood

auction/: build.gradle
cashfree/: pom.xml
chess_rust/: Cargo.toml
chess_rust/src/: board.rs  gameplay.rs  main.rs
chess_rust/src/moves/: mod.rs
chess_rust/src/moves/move_checkers/: mod.rs  right_move_checker.rs  up_move_checker.rs
chessboard/: settings.gradle
editor/: build.gradle
fit/: pom.xml
gs2/: pom.xml
jobscheduler/: pom.xml
lldobserveai/: build.gradle  settings.gradle
lldobserveai/gradle/wrapper/: gradle-wrapper.properties
meesho/: settings.gradle
meesho/src/main/java/: Solution.java
newsfeed/: settings.gradle
observe/: build.gradle.kts  settings.gradle.kts
observe/gradle/wrapper/: gradle-wrapper.properties
observeai/: pom.xml
phonepe/: settings.gradle
questionpapergenerator/: build.sbt
ridesharing/: pom.xml
rubix/: pom.xml
smarthome/: pom.xml
snakeandladderrust/: Cargo.toml
snakeandladderrust/src/: board_manager.rs  dice_manager.rs  main.rs
splitwise/: pom.xml
swiggy/: settings.gradle
tekion/: settings.gradle
tekion/src/main/java/: BillCalculator.java  BillCalculatorHourly.java  BillCalculatorImpl.java  BillingManager.java  BillingManagerImpl.java  Billingepository.java  Main.java  NoSlotAvailableException.java  ParkingApplication.java  ParkingApplicationImpl.java  SlotRepository.java  SlotSelector.java  SlotSelectorImpl.java  UseNotParkedException.java
untitled/src/: Main.java  OnlineResourceFetcher.java  ResourceFetcher.java
untitled/src/java/util/: MapImpl.java
untitled1/: pom.xml
(+245 files in other folders)
