[package]
name = "snakeandladderrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-option = "0.1.2"
dashmap = "5.5.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
once_cell = "1.18.0"
rand = "0.8.5"
uuid = { version = "1.4.0", features = ["v4"] }
